Fix layout issues with 3.2 widgets.
Also add more workbook steps to 3.2.

--- a/app/css/directives/ms-div-wholes.css
+++ b/app/css/directives/ms-div-wholes.css
@@ -1,26 +1,38 @@
-.divwhole ms-div-wholes ms-input label span {
+.divwhole ms-div-wholes ms-input label span,
+.divwhole ms-div-wholes ms-select label span{
     display: none;
 }
-.divwhole ms-div-wholes input {
+.divwhole ms-div-wholes input,
+.divwhole ms-div-wholes select {
     width: 65px;
 }
 .divwhole ms-div-wholes ms-event-label {
     display: inline-block;
 }
-.divwhole ms-div-wholes input{
-    font-size:1.2em;
+.divwhole ms-div-wholes input {
+    font-size: 1.2em;
     text-align: center;
 } 
-.divwhole ms-div-wholes #divisor {
+.divwhole ms-div-wholes .divisor {
     border-right: 2px solid black;
     padding: 8px 10px 11px 5px;
     border-radius: 0 15px 15px 0;
 }
-.divwhole ms-div-wholes #dividend {
+.divwhole ms-div-wholes .dividend {
     border-top: 2px solid black;
     padding: 7px 10px 4px 19px;
     position: relative;
     left: -12px;
+}
+.divwhole ms-div-wholes select {
+    margin: 10px;
+}
+.divwhole ms-div-wholes .dividend select {
+    width: 120px;
+}
+.divwhole ms-div-wholes ms-button-group table {
+    position: relative;
+    top: 13px;
 }
 /* > problem 6*/
 .divwhole ms-group td {
